apps/staging/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints:
    # If cert-manager is installed, uncomment and set your issuer:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: music.lab.nohermosa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  name: http
  tls:
    - hosts:
        - music.lab.nohermosa.com
      secretName: navidrome-tls
